fixed the navbar covering content issue

--- a/ecommerce_project/src/components/App.css
+++ b/ecommerce_project/src/components/App.css
@@ -6,3 +6,5 @@
   padding: 0;
   font-family: 'PT Sans', sans-serif;
 }
+
+body { padding-top: 70px; }
